Fix Overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,14 +3,14 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+ 
 }
 
 body {
     font-family: "Prompt", sans-serif;
     background-color: #0F1624;
-    width: 100%;
-    height: 100%;
+    overflow: hidden;
+   
 }
 
 html {
